[tool.poetry]
name = "hackweek"
version = "0.1.0"
description = ""
authors = ["Tom Hall <thattommyhall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudpickle = "^1.6.0"
ipfshttpclient = "^0.6.1"
jupyter = "^1.0.0"
flask = "^1.1.2"
toolz = "^0.11.1"
tqdm = "^4.56.0"
bpython = "^0.21"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
